[gd_scene load_steps=7 format=3 uid="uid://bs6o5glcfe2as"]

[ext_resource type="PackedScene" uid="uid://blpi4x6if673v" path="res://enemy/base_enemy.tscn" id="1_27jju"]
[ext_resource type="Texture2D" uid="uid://bf0rs7x60qf5e" path="res://enemy/projectile_enemy/octorok.png" id="2_8e4mk"]
[ext_resource type="Script" path="res://enemy/projectile_enemy/projectile_enemy.gd" id="2_rirh3"]
[ext_resource type="SpriteFrames" uid="uid://b3tys1ggbpdvu" path="res://enemy/projectile_enemy/sprites/projectile_sprite_frames.tres" id="5_ivjup"]

[sub_resource type="CircleShape2D" id="CircleShape2D_qplrn"]
radius = 304.105

[sub_resource type="RectangleShape2D" id="RectangleShape2D_3wk5l"]
size = Vector2(79.3333, 80)

[node name="ProjectileEnemy" node_paths=PackedStringArray("enemy_sprite") instance=ExtResource("1_27jju")]
script = ExtResource("2_rirh3")
attack_speed = 1.0
standstill_time = 0.5
attack_range = 1.3
attack_spread = 0.0
animation_length = 1.0
enemy_sprite = NodePath("AnimatedSprite2D")
agressive_target_distance_min = 300
agressive_target_distance_max = 500

[node name="PlayerDetectionComponent" parent="." index="0"]
detectable_distance = 800.0

[node name="HittingArea" parent="." index="1"]
visible = false

[node name="CollisionShape2D" parent="HittingArea" index="0"]
position = Vector2(736.25, -548.5)

[node name="Sprite2D" type="Sprite2D" parent="." index="3"]
visible = false
position = Vector2(0.887735, -0.156915)
rotation = -1.5708
scale = Vector2(3.68048, 3.58954)
texture = ExtResource("2_8e4mk")

[node name="Shooter" type="Node2D" parent="." index="4"]

[node name="StandStillTimer" type="Timer" parent="Shooter" index="0"]
one_shot = true

[node name="CooldownTimer" type="Timer" parent="Shooter" index="1"]
one_shot = true

[node name="AttackRange" type="Area2D" parent="Shooter" index="2"]
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Shooter/AttackRange" index="0"]
shape = SubResource("CircleShape2D_qplrn")

[node name="Hurtbox" type="CollisionShape2D" parent="." index="5"]
scale = Vector2(3, 3)
shape = SubResource("RectangleShape2D_3wk5l")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="." index="7"]
scale = Vector2(0.7, 0.7)
sprite_frames = ExtResource("5_ivjup")
animation = &"walk_left"
metadata/_edit_lock_ = true

[connection signal="timeout" from="Shooter/StandStillTimer" to="." method="enable_movement"]
[connection signal="timeout" from="Shooter/CooldownTimer" to="." method="end_cooldown"]
